// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`build-only yarn: build 1`] = `
Array [
  Array [
    Object {
      "buildArg": "YARN_VERSION",
      "buildArgs": Array [],
      "cache": "docker-build-cache",
      "cacheTags": Array [
        "latest",
        "1",
        "1.22",
      ],
      "dryRun": undefined,
      "image": "yarn",
      "tag": "1.22.4",
    },
  ],
]
`;

exports[`build-only yarn: publish 1`] = `Array []`;

exports[`last-only dummy: build 1`] = `
Array [
  Array [
    Object {
      "buildArg": "DUMMY_VERSION",
      "buildArgs": Array [
        "IMAGE=slim",
      ],
      "cache": undefined,
      "cacheTags": Array [
        "slim",
      ],
      "dryRun": undefined,
      "image": "dummy",
      "tag": "12-slim",
    },
  ],
]
`;

exports[`last-only dummy: publish 1`] = `
Array [
  Array [
    Object {
      "dryRun": undefined,
      "image": "dummy",
      "tag": "12-slim",
    },
  ],
]
`;

exports[`updates image yarn (dry-run): build 1`] = `
Array [
  Array [
    Object {
      "buildArg": "YARN_VERSION",
      "buildArgs": Array [],
      "cache": "docker-build-cache",
      "cacheTags": Array [
        "latest",
        "1",
        "1.22",
      ],
      "dryRun": true,
      "image": "yarn",
      "tag": "1.22.4",
    },
  ],
]
`;

exports[`updates image yarn (dry-run): publish 1`] = `
Array [
  Array [
    Object {
      "dryRun": true,
      "image": "yarn",
      "tag": "1.22.4",
    },
  ],
  Array [
    Object {
      "dryRun": true,
      "image": "yarn",
      "tag": "1",
    },
  ],
  Array [
    Object {
      "dryRun": true,
      "image": "yarn",
      "tag": "1.22",
    },
  ],
  Array [
    Object {
      "dryRun": true,
      "image": "yarn",
      "tag": "latest",
    },
  ],
]
`;

exports[`works dummy: build 1`] = `
Array [
  Array [
    Object {
      "buildArg": "DUMMY_VERSION",
      "buildArgs": undefined,
      "cache": undefined,
      "cacheTags": Array [
        "latest",
      ],
      "dryRun": undefined,
      "image": "dummy",
      "tag": "10",
    },
  ],
  Array [
    Object {
      "buildArg": "DUMMY_VERSION",
      "buildArgs": undefined,
      "cache": undefined,
      "cacheTags": Array [
        "latest",
      ],
      "dryRun": undefined,
      "image": "dummy",
      "tag": "12",
    },
  ],
  Array [
    Object {
      "buildArg": "DUMMY_VERSION",
      "buildArgs": undefined,
      "cache": undefined,
      "cacheTags": Array [
        "latest",
      ],
      "dryRun": undefined,
      "image": "dummy",
      "tag": "13",
    },
  ],
]
`;

exports[`works dummy: publish 1`] = `
Array [
  Array [
    Object {
      "dryRun": undefined,
      "image": "dummy",
      "tag": "10",
    },
  ],
  Array [
    Object {
      "dryRun": undefined,
      "image": "dummy",
      "tag": "12",
    },
  ],
  Array [
    Object {
      "dryRun": undefined,
      "image": "dummy",
      "tag": "13",
    },
  ],
  Array [
    Object {
      "dryRun": undefined,
      "image": "dummy",
      "tag": "latest",
    },
  ],
]
`;

exports[`works gradle: build 1`] = `
Array [
  Array [
    Object {
      "buildArg": "GRADLE_VERSION",
      "buildArgs": Array [],
      "cache": undefined,
      "cacheTags": Array [
        "latest",
        "3",
        "3.5",
      ],
      "dryRun": undefined,
      "image": "gradle",
      "tag": "3.5.4",
    },
  ],
  Array [
    Object {
      "buildArg": "GRADLE_VERSION",
      "buildArgs": Array [],
      "cache": undefined,
      "cacheTags": Array [
        "latest",
        "6",
      ],
      "dryRun": undefined,
      "image": "gradle",
      "tag": "6.0",
    },
  ],
]
`;

exports[`works gradle: publish 1`] = `
Array [
  Array [
    Object {
      "dryRun": undefined,
      "image": "gradle",
      "tag": "3.5.4",
    },
  ],
  Array [
    Object {
      "dryRun": undefined,
      "image": "gradle",
      "tag": "6.0",
    },
  ],
  Array [
    Object {
      "dryRun": undefined,
      "image": "gradle",
      "tag": "3",
    },
  ],
  Array [
    Object {
      "dryRun": undefined,
      "image": "gradle",
      "tag": "3.5",
    },
  ],
  Array [
    Object {
      "dryRun": undefined,
      "image": "gradle",
      "tag": "6",
    },
  ],
  Array [
    Object {
      "dryRun": undefined,
      "image": "gradle",
      "tag": "latest",
    },
  ],
]
`;

exports[`works pnpm: build 1`] = `
Array [
  Array [
    Object {
      "buildArg": "PNPM_VERSION",
      "buildArgs": Array [
        "IMAGE=slim",
      ],
      "cache": undefined,
      "cacheTags": Array [
        "slim",
        "5-slim",
        "5.0-slim",
      ],
      "dryRun": undefined,
      "image": "pnpm",
      "tag": "5.0.0-slim",
    },
  ],
]
`;

exports[`works pnpm: publish 1`] = `
Array [
  Array [
    Object {
      "dryRun": undefined,
      "image": "pnpm",
      "tag": "5.0.0-slim",
    },
  ],
  Array [
    Object {
      "dryRun": undefined,
      "image": "pnpm",
      "tag": "5-slim",
    },
  ],
  Array [
    Object {
      "dryRun": undefined,
      "image": "pnpm",
      "tag": "5.0-slim",
    },
  ],
  Array [
    Object {
      "dryRun": undefined,
      "image": "pnpm",
      "tag": "slim",
    },
  ],
]
`;

exports[`works yarn: build 1`] = `
Array [
  Array [
    Object {
      "buildArg": "YARN_VERSION",
      "buildArgs": Array [],
      "cache": "docker-build-cache",
      "cacheTags": Array [
        "latest",
        "1",
        "1.22",
      ],
      "dryRun": undefined,
      "image": "yarn",
      "tag": "1.22.4",
    },
  ],
]
`;

exports[`works yarn: publish 1`] = `
Array [
  Array [
    Object {
      "dryRun": undefined,
      "image": "yarn",
      "tag": "1.22.4",
    },
  ],
  Array [
    Object {
      "dryRun": undefined,
      "image": "yarn",
      "tag": "1",
    },
  ],
  Array [
    Object {
      "dryRun": undefined,
      "image": "yarn",
      "tag": "1.22",
    },
  ],
  Array [
    Object {
      "dryRun": undefined,
      "image": "yarn",
      "tag": "latest",
    },
  ],
]
`;
